5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1735_2527.log
== TEST (2019-05-14 19:25:20) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else():
		print("NAO PERFEITO")
			
-- ERROR:
File "XXXX", line 18
    else():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:26) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
			
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:25:31) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
			
-- EXECUTION TIME:
0.167387
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
8128
NAO PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
20
NAO PERFEITO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:33) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
			
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:35) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
			
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:52) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
			
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:54) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
			
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:57) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
			
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:26:19) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<=n):
		if(n % b == 0):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
			
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:29:57) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != n):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:30:10) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 or n != n):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:30:33) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:30:37) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:30:40) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:30:42) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- EXECUTION TIME:
0.232309
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
NAO PERFEITO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:30:45) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:30:49) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:31:00) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:31:03) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:31:11) 
-- CODE:
n = int(input("digite o numero: "))
if(n == 1):
	print("1")
	print("PERFEITO")
else:
	i = 0
	b = 1
	e = 0
	s = 0
	while(i<n):
		if(n % b == 0 and n != b):
			s = s + b
			print(b)
			e = e + 1
		b = b + 1
		i = i + 1
	if(s == n):
		print("PERFEITO")
	else:
		print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
